--- a/gatsby/src/layouts/main.scss
+++ b/gatsby/src/layouts/main.scss
@@ -122,7 +122,7 @@ $display2-size: 5.5rem !default;
 $display3-size: 4.5rem !default;
 $display4-size: 3.5rem !default;
 
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
+// @import 'node_modules/bootstrap/scss/bootstrap.scss';
 
 html,
 body {
@@ -1165,7 +1165,7 @@ a:not([href]):not([tabindex]):hover {
    transform: scale(0.9);
    -webkit-transition: all 400ms ease;
    transition: all 400ms ease; */
-  //  background-color: #696a6b61;
+   background-color: rgba(105,106,107,0.38);
     top: 6px;
     left: 7px;
     bottom: 0;
