--- a/gatsby/src/layouts/main.scss
+++ b/gatsby/src/layouts/main.scss
@@ -1000,10 +1000,13 @@ a:not([href]):not([tabindex]):hover {
 /* ==========================================================================
   Hero Area Style
   ========================================================================== */
+.front-banner {
+  background: url(/img/main_banner.jpg) no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
 #hero-area {
-   background: url(/img/main_banner.jpg) no-repeat;
-   background-size: cover;
-   height: 100vh;
    color: #fff;
    overflow: hidden;
    position: relative;
@@ -1717,8 +1720,8 @@ a:not([href]):not([tabindex]):hover {
   Contact Icon
   ========================================================================== */
 .contact-icon {
-   background: url(/img/contact-bg.jpg) fixed;
-   background-position: 50% -210px;
+   background: url(/img/fachadaprincipal.jpg) fixed;
+   background-position: 25% bottom;
    position: relative;
 }
 
@@ -1729,7 +1732,7 @@ a:not([href]):not([tabindex]):hover {
    top: 0px;
    left: 0px;
    background: #000;
-   opacity: 0.9;
+   opacity: 0.7;
    filter: alpha(opacity=90);
 }
 
@@ -1868,6 +1871,11 @@ footer .menu li a:hover {
 .social-icon .twitter:hover {
    background-color: #55acee;
    border-color: #55acee;
+}
+
+.social-icon .instagram:hover {
+  background-color: #8a3ab9;
+  border-color: #8a3ab9;
 }
 
 .social-icon .dribble:hover {
