--- a/src/layouts/main.scss
+++ b/src/layouts/main.scss
@@ -829,7 +829,7 @@ a:not([href]):not([tabindex]):hover {
 
 .navbar-expand-lg.bg-faded .navbar-nav .nav-link:focus,
 .navbar-expand-lg.bg-faded .navbar-nav .nav-link:hover {
-   color: #fff !important;
+   color: #9ad0f5 !important;
 }
 
 .navbar-expand-lg.menu-bg .navbar-nav .nav-link:focus,
