adicionando imagem de banner do projeto

--- a/src/layouts/main.scss
+++ b/src/layouts/main.scss
@@ -1008,6 +1008,12 @@ a:not([href]):not([tabindex]):hover {
   height: 100vh;
 }
 
+.p-centro-reabilitacao {
+  background: url(/img/portfolio/centro_reabilitacao_banner.jpg) no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
 #hero-area {
    color: #fff;
    overflow: hidden;
