--- a/src/layouts/main.scss
+++ b/src/layouts/main.scss
@@ -2026,3 +2026,10 @@ footer .menu li a:hover {
 .logo-img {
   max-width: 100px;
 }
+
+@media only screen and (min-width: 800px) {
+	// .field--6-in-row {
+	// 	flex-basis: 16.66667%; 
+	// 	-ms-flex-preferred-size: 16.66667%;
+	// }
+}
