--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -19,6 +19,19 @@
     }
 }
 
+.project__parallax__container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    .parallax__image {
+        width: 100vw;
+        height: 100vh;
+        background-size: cover;
+        background-position: bottom;
+    }
+}
+
 .narrow,
 blockquote {
     max-width: 45em;
