modificações para nova apresentação

--- a/src/layouts/main.scss
+++ b/src/layouts/main.scss
@@ -1291,6 +1291,7 @@ a:not([href]):not([tabindex]):hover {
    font-size: 14px;
    line-height: 22px;
    color: #fff;
+   font-weight: bold;
    text-align: center;
    -webkit-transform: translateY(40px);
    transform: translateY(40px);
